--- a/__mocks__/invalid.html
+++ b/__mocks__/invalid.html
@@ -4,37 +4,94 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <style>
-    .some-selector-custom-rules {
-      border-radius: 1px 2px 1px 2px;
-      font: 1em Times New Roman, Times, serif;
-      color: lch(56.29% 19.86 10 / 15%);
-      font-weight: bold;
+    /*color-no-invalid-hex*/
+    .invalid-color {
+      color: #zzzzzz;
+    }
+
+    /*alpha-value-notation*/
+    .alpha-value {
       opacity: 50%;
-      display: -webkit-flex;
-      -webkit-transform: scale(1);
-      top: 0px;
-      background: #12345aa;
     }
 
-    [title=flower] {
-      color: rgb(0 0 0)
+    /*color-function-notation*/
+    .color-function {
+      color: color(display-p3 0.5 0.4 0.3);
     }
 
-    a::after { color: pink; }
-
-    :not(a):not(div) {
-      color: #ffffff;
+    /*font-weight-notation*/
+    .font-weight {
+      font-weight: bold;
     }
 
-    @media (-o-max-device-pixel-ratio: 1/1) {}
+    /*import-notation*/
+    @import url("styles.css");
 
-    @keyframes foo { from {} 100% {} }
+    /*selector-pseudo-element-colon-notation*/
+    ::before {
+      content: '';
+    }
 
+    /*declaration-property-value-no-unknown*/
+    .unknown-property {
+      foo-bar: 42;
+    }
 
-    input::-moz-placeholder {}
+    /*max-nesting-depth*/
+    .nesting-1 {
+      .nesting-2 {
+        .nesting-3 {
+          .nesting-4 {
+            color: red;
+          }
+        }
+      }
+    }
 
-    @-ms-viewport { orientation: landscape; }
+    /*selector-max-attribute*/
+    .max-attribute[class][data-attr][type][role] {
+      color: blue;
+    }
 
+    /*selector-max-combinators*/
+    .combinators-1 > .combinators-2 + .combinators-3 ~ .combinators-4 {
+      color: green;
+    }
+
+    /*selector-max-id*/
+    #id1 #id2 {
+      color: yellow;
+    }
+
+    /*selector-max-compound-selector*/
+    .compound1.compound2.compound3.compound4 {
+      color: purple;
+    }
+
+    /*selector-max-pseudo-class*/
+    .pseudo-class:hover:focus:active:checked {
+      color: orange;
+    }
+
+    /*selector-max-type*/
+    div span p ul {
+      color: brown;
+    }
+
+    /*selector-max-universal*/
+    * * {
+      color: pink;
+    }
+
+    /*color-named*/
+    .named-color {
+      color: red;
+    }
+
+    /*color-hex-alpha*/
+    .hex-alpha {
+      color: #ff000080;
+    }
   </style>
 </head>
 <body>
